--- a/metadata.desktop
+++ b/metadata.desktop
@@ -6,10 +6,10 @@ Type=Service
 Icon=preferences-system-windows-effect-presentwindows
 X-Plasma-API=declarativescript
 X-Plasma-MainScript=ui/main.qml
-X-KDE-PluginInfo-Author=Tiago de O. Corrêa
+X-KDE-PluginInfo-Author=Tiago Corrêa
 X-KDE-PluginInfo-Email=tcorreabr@gmail.com
 X-KDE-PluginInfo-Name=Parachute
-X-KDE-PluginInfo-Version=0.5.1
-X-KDE-PluginInfo-License=GPL
+X-KDE-PluginInfo-Version=0.6.0
+X-KDE-PluginInfo-License=GPLv3
 X-KDE-PluginInfo-EnabledByDefault=true
 X-KDE-ServiceTypes=KWin/Script
