--- a/metadata.desktop
+++ b/metadata.desktop
@@ -4,12 +4,17 @@ Name=Parachute
 Comment=Windows and desktops from above
 Type=Service
 Icon=preferences-system-windows-effect-presentwindows
+
 X-Plasma-API=declarativescript
 X-Plasma-MainScript=ui/main.qml
+X-KDE-ServiceTypes=KWin/Script,KCModule
+X-KDE-Library=kwin/effects/configs/kcm_kwin4_genericscripted
+X-KDE-PluginKeyword=Parachute
+X-KDE-ParentComponents=Parachute
+
 X-KDE-PluginInfo-Author=Tiago Corrêa
 X-KDE-PluginInfo-Email=tcorreabr@gmail.com
 X-KDE-PluginInfo-Name=Parachute
 X-KDE-PluginInfo-Version=0.6.0
 X-KDE-PluginInfo-License=GPLv3
 X-KDE-PluginInfo-EnabledByDefault=true
-X-KDE-ServiceTypes=KWin/Script
